tests/core/snapshots/test-multiple-resolvable-directives-on-field.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream @link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Address {
  city: String
  street: String
}

type Query {
  user1: User
  @expr(body: { name: "name expr 1" })
  @http(url: "http://jsonplaceholder.typicode.com/users/1")
  user2: User
  @http(url: "http://jsonplaceholder.typicode.com/users/2")
  @expr(body: { name: "name expr 2" })
  user3: User
  @http(url: "http://jsonplaceholder.typicode.com/users/3")
  @graphQL(
    args: [{ key: "id", value: "3" }]
    url: "http://upstream/graphql"
    name: "user"
  )
}

type User {
  address: Address
  id: Int
  name: String
}
