tests/core/snapshots/test-nested-input.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream @link(src: "schema_0.graphql", type: Config) {
  query: Query
}

input A {
  b: B
}

input B {
  c: C
}

input C {
  d: D
}

input D {
  e: Int
}

type Query {
  a(a: A!): X @expr(body: { a: "hello" })
}

type X {
  a: String
}
