tests/core/snapshots/test-nested-value.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream @link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Post {
  id: Int
  user: User!
  @http(
    url: "http://jsonplaceholder.typicode.com/users"
    query: [{ key: "id", value: "{{.value.user.id}}" }]
  )
}

type Query {
  posts: [Post] @http(url: "http://jsonplaceholder.typicode.com/posts")
}

type User {
  id: Int!
  name: String
}
