tests/core/snapshots/test-on-response-body.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server
@upstream
@link(src: "test.js", type: Script)
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Query {
  hello: User!
  @http(
    url: "https://jsonplaceholder.typicode.com/users/1"
    onResponseBody: "onResponse"
  )
}

type User {
  id: Int!
  name: String!
}
