tests/core/snapshots/test-optional-key-skip-empty.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server(port: 8000)
@upstream
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Bar {
  id: Int
}

type Foo {
  bar: Bar
  @http(
    url: "http://example.com/bar"
    query: [
      { key: "tagEmpty", value: "{{.value.tag}}", skipEmpty: true }
      { key: "tag", value: "{{.value.tag}}" }
    ]
  )
  id: Int!
  tag: String
}

type Query {
  foos: [Foo] @http(url: "http://example.com/foos")
}
