tests/core/snapshots/test-ref-other.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server(port: 8000)
@upstream
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type InPost {
  get: [Post] @http(url: "http://jsonplaceholder.typicode.com/posts")
}

type Post {
  id: Int!
  userId: Int!
}

type Query {
  posts: InPost
}
