tests/core/snapshots/test-scalars-validation.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server(hostname: "localhost", port: 8000)
@upstream
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Query {
  emailInput(x: Email!): Boolean @expr(body: "{{.args.x}}")
  emailOutput: Email! @expr(body: 125)
}
